argo-cd/demo/resources/argocd-server-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  name: argocd-server
spec:
  rules:
  - host: argocd.dev.argoproj.io
    http:
      paths:
      - backend:
          serviceName: argocd-server
          servicePort: https
